<?xml version="1.0"?>
<package format="2">
    <name>fw_att_control</name>
    <version>0.0.1</version>
    <description>Low-Level controller for Fixed Wing aircrafts</description>
    <maintainer email="aerialroboticsiitk@gmail.com">aerial-robotics-iitk-bot</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

</package>
