<?xml version="1.0"?>
<package format="2">
    <name>mathlib</name>
    <version>0.0.1</version>
    <description>Mathematical Helper functions</description>
    <maintainer email="aerialroboticsiitk@gmail.com">aerial-robotics-iitk-bot</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

</package>
